# taboo4students

./: .env.example  .gitignore  README.md  cheatsheet.md  pyproject.toml
.devcontainer/: devcontainer.json
agents/: my_agent_submission.py
core/: agent.py  answer_generation.py  decorators.py  errors.py  guesser.py  rules.py  tester.py
data/: words_with_taboo.txt
data/level3_data/: hints.txt  hints_db.json  words.txt
data/translations/: it_fr.json
scripts/: create_db_hints.py  repo_setup.py  test_solutions.py
